# Research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  backtest.py  backtest2.py  main.py  pyproject.toml  run_patch_diagnostics.sh  run_pytest_diagnostics.sh  run_remaining_test_results.sh
.github/: pull_request_template.md
apps/internal_web/: README.md  manage.py  pyproject.toml
apps/internal_web/src/market_research_web/: __init__.py  asgi.py  database.py  middleware.py  operations_contract.py  settings.py  settings_test.py  urls.py  wsgi.py
apps/internal_web/src/portal/: __init__.py  admin.py  admission.py  api_contract.py  api_views.py  apps.py  audit.py  auth_audit.py  authorization.py  capability_routes.py  execution.py  forms.py  governance.py  jobs.py  login_throttle.py  models.py  presenters.py  report_imports.py  reports.py  research_explorer.py  security.py  storage.py  upload_handlers.py  urls.py  views.py  worker.py
apps/internal_web/src/portal/migrations/: 0001_initial.py  0002_seed_rbac.py  0003_validation_preflight_binding.py  0004_researchjob_one_active_per_owner.py  0005_manifest_experiment_id_and_login_throttle.py  0006_webauditevent.py  0007_governance_authority.py  0008_imported_decision_report.py  0009_resourceaccessgrant.py  0010_dataset_resource_access.py
apps/internal_web/src/portal/static/portal/: app.css  app.js  manifest.webmanifest
apps/internal_web/src/portal/templates/portal/: base.html  dashboard.html  error.html  job_detail.html  job_list.html  manifest_detail.html  manifest_upload.html  report_catalog.html  research_explorer.html  research_explorer_detail.html  review_detail.html  review_queue.html
apps/internal_web/src/portal/templates/registration/: login.html
apps/internal_web/tests/: conftest.py  test_accessibility_contract.py  test_api_contract.py  test_audit_outbox.py  test_authentication_audit_admin_boundary.py  test_browser_e2e.py  test_configuration_audit.py  test_data_explorer.py  test_database_settings.py  test_forms_models.py  test_governance_database_authority.py  test_governance_postgresql_atomicity.py  test_jobs_worker.py  test_login_throttle.py  test_postgresql_integration_contract.py  test_report_imports.py  test_reports.py  test_research_explorer.py  test_resource_authorization.py  test_review_workflow.py  test_security_storage.py  test_views_execution.py
docs/: OPERATOR_REPORTING.md  RUNBOOK.md  architecture-boundaries.json  cash-drift-report.md  config-reference.md  dataset_artifact_legacy_policy.md  derivative-research.md  internal-web-api.md  internal-web-architecture.md  internal-web-iterations.md  internal-web-operations-handoff.md  investment-research-platform-audit-report.md  investment-research-platform-audit-result.json  investment-research-platform-audit-rubric.md  investment-research-platform-audit.json  investment-research-platform.md  live-submit-authority.md  monorepo-architecture.md  monorepo-iterations.md  multi-asset-investment-research-audit-instructions.md  multi-asset-investment-research-audit-matrix.json  multi-asset-investment-research-audit-report.md  multi-asset-investment-research-audit-result.json  multi-asset-investment-research-audit-rubric.md  multi-asset-research.md  paper-execution-lifecycle.md  platform-completeness-criteria.json  platform-completeness-evidence-runner.md  (+18 more)
examples/strategy_plugin_package/: example_strategy_plugin.py  pyproject.toml
services/research_operations/: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
services/research_operations/config/: gunicorn-ops.conf.py  gunicorn-web.conf.py  monitoring-policy.json  runtime.env.example
services/research_operations/deploy/: OFFICIAL_DEPLOYMENT  compose-reference.md  compose.yaml
services/research_operations/deploy/native/: README.md  gunicorn-ops.conf.py  gunicorn-web.conf.py  runtime.env.example
services/research_operations/deploy/native/nginx/: research-operations.conf.template
services/research_operations/deploy/native/nginx/nginx.service.d/: research-operations.conf
services/research_operations/deploy/native/postgresql/: 90-research-operations.conf  pg_hba.conf
services/research_operations/deploy/native/systemd/: research-operations-backup.service  research-operations-backup.timer  research-operations-job-worker.service  research-operations-migrate.service  research-operations-ops-api.service  research-operations-outbox-worker@.service  research-operations-preflight.service  research-operations-preflight.timer  research-operations-retention-audit.service  research-operations-retention-audit.timer  research-operations-validator.service  research-operations-web.service  research-operations.target
services/research_operations/deploy/nginx/: default.conf.template
services/research_operations/deploy/postgres/: pg_hba.conf  postgresql.conf
services/research_operations/docs/: runbook.md
services/research_operations/scripts/: apply-migrations.sh  audit-validator-loop.sh  build-image.sh  create-backup.sh  generate-test-pki.sh  initialize-postgresql.sh  postgres-tls-entrypoint.sh  qualify-filesystem.py  restore-rehearsal.sh  runtime-entrypoint.py  safe-extract.py  verify-backup.sh
services/research_operations/src/research_operations/: __init__.py  admission.py  admitted.py  alerting.py  backup.py  cli.py  commands.py  database.py  errors.py  execution_capability.py  health.py  metrics.py  migrate.py  outbox.py  release.py  research_job_worker.py  runtime.py  runtime_guard.py  worker.py
services/research_operations/src/research_operations/migrations/: 0001_initial.sql  0002_runtime_control.sql  0003_research_job_receipt.sql  0004_worker_release_provenance.sql  0005_recovery_activation_event.sql  0006_service_alert_workflow.sql  __init__.py
services/research_operations/tests/: test_ci_blank_restore_rehearsal.py  test_core_unit.py  test_native_deployment.py  test_operations_job_sandbox_runtime.py  test_operations_surface.py  test_postgresql_core.py  test_prior_release_upgrade.py  test_service_alert_postgresql.py  test_service_alert_unit.py
(+1237 files in other folders)
