[project]
name = "market-research"
version = "0.1.0"
description = "Offline and reproducible market-strategy research toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pip-audit==2.10.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
market_research = ["_build_provenance.json", "builtin_strategies/*.strategy.json"]

[tool.uv.workspace]
members = [
    "apps/internal_web",
    "services/research_operations",
]

[project.scripts]
market-research = "market_research.research_bootstrap:run_cli"

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"
markers = [
    "fast_regression: quick deterministic research regression checks",
    "slow_integration: slower research integration checks",
    "slow_research: slower research validation/report checks that are still useful as focused regressions",
    "unit: isolated unit tests without external research execution",
    "contract: payload, hash, gate, and schema contract tests with fake or direct lower-level inputs",
    "integration: multi-module tests expected to stay below E2E runtime",
    "research_kernel: real strategy/backtest kernel tests excluded from default-fast validation",
    "research_e2e: real research backtest pipeline tests",
    "audit_e2e: real research backtest tests with complete external audit binding",
    "walk_forward_e2e: real research walk-forward pipeline tests",
    "parallel_e2e: real serial/parallel research execution comparison tests",
    "nightly: expensive research validation intended for nightly or dedicated pipelines",
    "memory_sensitive: tests that guard memory/resource semantics or order-dependent RSS behavior",
    "resource_guard: deterministic tests for research resource-limit enforcement and reporting",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_unimported = true
plugins = ["mypy_django_plugin.main"]
mypy_path = [
    "src",
    "apps/internal_web/src",
    "services/research_operations/src",
]
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
pretty = true
warn_unused_configs = true

[tool.django-stubs]
django_settings_module = "market_research_web.settings_test"
strict_settings = true
strict_model_abstract_attrs = true
