[project]
name = "market-research-internal-web"
version = "0.1.0"
description = "Isolated internal Django adapter for market-research"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "market-research",
]

[dependency-groups]
dev = [
    "playwright>=1.55,<2",
    "pytest>=9.0.2",
    "pytest-django>=4.11",
]

[tool.uv.sources]
market-research = { path = "../..", editable = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "market_research_web.settings_test"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"

