[project]
name = "market-research-internal-web"
version = "0.1.0"
description = "Isolated internal Django adapter for market-research"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "market-research",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
market_research_web = ["_build_provenance.json"]
portal = [
    "templates/portal/*.html",
    "templates/registration/*.html",
    "static/portal/*",
]

[project.optional-dependencies]
postgresql = [
    "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2,<5.3",
    "playwright>=1.55,<2",
    "pytest>=9.0.2",
    "pytest-django>=4.11",
]

[tool.uv.sources]
market-research = { workspace = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "market_research_web.settings_test"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"
