[project]
name = "bithumb-bot-strategy-plugin-example"
version = "0.1.0"
description = "Example external strategy plugin package for bithumb-bot"
requires-python = ">=3.11"
dependencies = ["bithumb-bot"]

[project.entry-points."bithumb_bot.strategy_plugins"]
example_research_only = "example_strategy_plugin:LEVEL_1_RESEARCH_ONLY_PLUGIN"
example_replay_compatible = "example_strategy_plugin:LEVEL_2_REPLAY_COMPATIBLE_PLUGIN"
